--- a/view/gnuhealth_health_service.xml
+++ b/view/gnuhealth_health_service.xml
@@ -4,7 +4,7 @@ this repository contains the full copyright notices and license terms. -->
 <data>
 
     <xpath
-        expr="/form/field[@name='invoice_to']"
+        expr="/form/group/field[@name='invoice_to']"
         position="after">
         <label name="requestor"/>
         <field name="requestor"/>
