--- a/view/gnuhealth_insurance_form.xml
+++ b/view/gnuhealth_insurance_form.xml
@@ -2,14 +2,14 @@
 
 <data>
     <xpath
-        expr="/form/field[@name='number']"
+        expr="/form/group/field[@name='number']"
         position="after">
         <label name="bpc"/>
         <field name="bpc"/>
     </xpath>
 
     <xpath
-        expr="/form/field[@name='plan_id']"
+        expr="/form/group/field[@name='plan_id']"
         position="after">
         <label name="couverture"/>
         <field name="couverture"/>
@@ -18,7 +18,7 @@
     </xpath>
 
     <xpath
-        expr="/form/field[@name='member_exp']"
+        expr="/form/group/field[@name='member_exp']"
         position="after">
         <label name="date_em"/>
         <field name="date_em"/>
