--- a/view/invoice_form.xml
+++ b/view/invoice_form.xml
@@ -3,7 +3,10 @@
     <xpath expr="/form/notebook/page/group/group/group/field[@name=&quot;total_amount&quot;]" position="after">
         <newline/>
         <label name="part_assurance"/>
+        <field name="part_assurance"/>
+        <label name="part_patient"/>
         <field name="part_patient"/>
         <label name="dernier_payement"/>
+        <field name="dernier_payement"/>
     </xpath>
 </data>
