Ajout du montant total 2

--- a/view/invoice_form.xml
+++ b/view/invoice_form.xml
@@ -8,5 +8,7 @@
         <field name="montant_patient"/>
         <label name="dernier_versement"/>
         <field name="dernier_versement"/>
+        <label name="total_amount2"/>
+        <field name="total_amount2"/>
     </xpath>
 </data>
