--- a/view/gnuhealth_health_service.xml
+++ b/view/gnuhealth_health_service.xml
@@ -10,6 +10,8 @@ this repository contains the full copyright notices and license terms. -->
         <field name="requestor"/>
         <label name="agent"/>
         <field name="agent"/>
+        <label name="z_remise2"/>
+        <field name="z_remise2"/>
     </xpath>
 
 </data>
