--- a/view/pay_start_form.xml
+++ b/view/pay_start_form.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name=&quot;date&quot;]" position="after">
+    <xpath expr="/form/field[@name=&quot;amount&quot;]" position="after">
         <newline/>
         <label name="amount_l"/>
         <field name="amount_l" colspan="3"/>
+    </xpath>
+    <xpath expr="/form/field[@name=&quot;amount&quot;]" position="before">
+        <newline/>
+        <label name="montant_facture"/>
+        <field name="montant_facture" colspan="3"/>
+        <field name="montant_facture_l" colspan="4"/>
+    </xpath>
+    <xpath expr="/form/field[@name=&quot;amount_l&quot;]" position="after">
+        <newline/>
+        <label name="reste_payer"/>
+        <field name="reste_payer" colspan="3"/>
+        <field name="reste_payer_l" colspan="4"/>
     </xpath>
     <xpath expr="/form/field[@name=&quot;payment_method&quot;]" position="after">
         <newline/>
