--- a/view/invoice_form.xml
+++ b/view/invoice_form.xml
@@ -10,6 +10,8 @@
         <field name="total_amount2"/>
         <label name="dernier_versement"/>
         <field name="dernier_versement"/>
+        <label name="montant_verse"/>
+        <field name="montant_verse"/>
         <label name="remboursement"/>
         <field name="remboursement"/>
     </xpath>
