Tout ce qui concerne l'affichage de la facture f

--- a/view/pay_start_form.xml
+++ b/view/pay_start_form.xml
@@ -5,7 +5,7 @@
         <label name="amount_l"/>
         <field name="amount_l" colspan="3"/>
     </xpath>
-    <xpath expr="/form/field[@name=&quot;amount_l&quot;]" position="before">
+    <!-- <xpath expr="/form/field[@name=&quot;amount&quot;]" position="before">
         <newline/>
         <label name="montant_facture"/>
         <field name="montant_facture" colspan="3"/>
@@ -14,5 +14,5 @@
         <newline/>
         <label name="number"/>
         <field name="number"/>
-    </xpath>
+    </xpath> -->
 </data>
