--- a/view/party_form.xml
+++ b/view/party_form.xml
@@ -5,4 +5,13 @@
          <field name="signature2"/>
       </page>
    </xpath>
+
+   <xpath expr="/form/notebook/page[@name='signature2']" position="after">
+      <page name="Banque">
+         <label name="numero_carte"/>
+         <field name="numero_carte"/>
+         <label name="clef"/>
+         <field name="clef"/>
+      </page>
+   </xpath>
 </data>
